--- a/WebContent/arkaapp/styles.css
+++ b/WebContent/arkaapp/styles.css
@@ -158,7 +158,7 @@ margin: 0 auto;
 }
 
 .container{
-	width: 912px;
+	width: 950px;
 	margin: 0px auto;
 	
 	background: rgb(82, 83, 87);
@@ -194,12 +194,24 @@ ul.secondsublink  {
 }
 .copyright {
 	/* border-top: 1px solid #DDDDDD;*/
-    color: #FFFFFF;
-    font: bold 13px/14px sourcesansproregular;
+    color: #DBD6D9;
+    font: 15px/14px sourcesansproregular;
    /* margin-top: 10px;*/
     padding: 10px 0;
     text-align: center;
 }
+
+.contacttext{
+	
+	 
+	 
+	color: #DBD6D9;
+	margin-left: 0px;
+	margin-top: 12px;
+	font: 16px/14px sourcesansproregular;
+	padding-bottom: 3px;
+}
+
 .copyright a {
 	text-decoration: none !important;
 }
