--- a/WebContent/arkaapp/templatemo_style.css
+++ b/WebContent/arkaapp/templatemo_style.css
@@ -153,7 +153,7 @@ opacity: 0.7;
 border-radius: 11px;
 filter: alpha(opacity = 40);
 line-height: 9px;
-width: 241px;
+width: 296px;
 z-index: 100;
 }
 
@@ -163,6 +163,9 @@ margin-left: 16px;
 color: #ff0000;
 margin-top: 10;
 font-weight: bold;
+display: inline-block;
+float: left;
+padding: 7px 2px;
 }
 
 .header_01 {
